syntax = "proto3";

option java_package = "org.zxkill.nori.skills.weather";
option java_multiple_files = true;

enum LengthUnit {
  LENGTH_UNIT_SYSTEM = 0;
  LENGTH_UNIT_METRIC = 1;
  LENGTH_UNIT_IMPERIAL = 2;
}
